--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,19 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+	<Dependencies>
+	<dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13</version>
+    <scope>test</scope>
+	</dependency>
+	
+	</Dependencies>
+
+
+
+
 
     <build>
         <finalName>sl-calc</finalName>
