--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
-	<Dependencies>
+	<dependencies>
 	<dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
@@ -18,7 +18,7 @@
     <scope>test</scope>
 	</dependency>
 	
-	</Dependencies>
+	</dependencies>
 
 
 
