--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <version>4.13</version>
     <scope>test</scope>
 	</dependency>
+	<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>6.0.0-M2</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 
 
