--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,11 @@
     </properties>
 	<dependencies>
 	<dependency>
-    <groupId>org.junit.jupiter</groupId>
-    <artifactId>junit-jupiter-api</artifactId>
-    <version>6.0.0-M2</version>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.13</version>
     <scope>test</scope>
-</dependency>
+	</dependency>
 	</dependencies>
 
 
